# Copyright (c) 2025 Huawei Device Co., Ltd.. All rights reserved.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/graphic/graphic_2d/frameworks/text/config.gni")
import("//foundation/graphic/graphic_2d/graphic_config.gni")

config("rosen_text_config") {
  defines = [
    "ENABLE_TEXT_ENHANCE",
    "ENABLE_DRAWING_ADAPTER",
  ]

  if (platform_is_ohos) {
    defines += [
      "ENABLE_OHOS_ENHANCE",
      "HM_SYMBOL_TXT_ENABLE",
    ]
  } else {
    defines += [ "MODULE_TEXTING" ]
  }

  if (platform_is_ohos || is_arkui_x) {
    defines += [ "BUILD_NON_SDK_VER" ]
  }

  if (is_arkui_x) {
    defines += [ "CROSS_PLATFORM" ]
  }

  if (current_os == "mingw") {
    defines += [ "WINDOWS_PLATFORM" ]
  }

  if (rs_enable_gpu) {
    defines += [ "RS_ENABLE_GPU" ]
  }

  include_dirs = [
    "$rosen_text_root",
    "$rosen_text_root/interface/export",
    "$rosen_text_root/interface/export/rosen_text",
  ]

  cflags_cc = [
    "-Wno-implicit-fallthrough",
    "-fvisibility-inlines-hidden",
    "-std=c++17",
  ]
}

if (is_arkui_x) {
  ohos_source_set("rosen_text") {
    deps = [ "service:rosen_text_skia" ]

    part_name = "graphic_2d"
    subsystem_name = "graphic"
  }
} else {
  ohos_shared_library("rosen_text") {
    deps = [
      "$rosen_root/modules/2d_graphics:2d_graphics",
      "service:rosen_text_skia",
    ]

    external_deps = [ "hilog:libhilog" ]

    part_name = "graphic_2d"
    subsystem_name = "graphic"
  }
}
